Backend: Add springSecurityFilterChain to web security